--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "tracker:dev": "nest start tracker --watch",
-    "admin:dev": "nest start admin --watch",
+    "cms:dev": "nest start cms --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -31,6 +31,7 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "mongoose": "^5.11.8",
+    "nestjs-i18n": "^8.0.10",
     "nestjs-typegoose": "^7.1.38",
     "reflect-metadata": "^0.1.13",
     "request-ip": "^2.1.3",
