--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,12 @@
     "paths": {
       "@tracker/*": [
         "apps/tracker/src/*"
+      ],
+      "@cms/*": [
+        "apps/cms/src/*"
+      ],
+      "@config/*": [
+        "config/*"
       ]
     }
   }
