--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bencode": "^2.0.1",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "lru-cache": "^6.0.0",
     "mongoose": "^5.11.8",
     "nestjs-i18n": "^8.0.10",
     "nestjs-typegoose": "^7.1.38",
@@ -45,6 +46,7 @@
     "@types/bencode": "^2.0.0",
     "@types/express": "^4.17.9",
     "@types/jest": "^26.0.19",
+    "@types/lru-cache": "^5.1.0",
     "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.16",
     "@types/request-ip": "0.0.35",
